assets/css/style.css
:root {
    --drkbl: rgb(51, 51, 119);
    --baby: rgb(146, 209, 226);
    --gry: rgb(75, 75, 75);

}

* {
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    padding: 0;
    margin: 0;

}

body {
    background-color: white;

}

header {
    justify-content: space-between;
    color: var(--baby);
    background-color: var(--gry);
    display: flex;
    padding: 1%;
    align-items: center;
    
}

.profilepic {
    position:absolute;
    left: 15px;
    height: 150px;
    
}

#headertittle {
    height: 50px;
    width: 350px;
    color: var(--gry);
    margin-left: -50px;
    display: inline-block;
    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    background-color: var(--baby);
    text-align: right;
}

nav a {
    display: flex;
    font-size: 25px;
    margin-right: 25px;
    display: inline-block;
    color: var(--baby);
 
}

nav ul li {
    display: inline-block;

}
#banner {
    background-image: url("../images/grungy-white-background-natural-cement-stone-old-texture-as-retro-pattern-wall-conceptual-wall-banner-grunge-material-construction.jpg");;
    height: 150px;
    width: 100%;
    margin-bottom: 20px;
}

#bannersub {
    color: var(--gry);
    background-color: var(--baby);
    height: fit-content;
    width: fit-content;
    font-size: 30px;
    text-align: center;
    display: flex;
    position: relative;
    top: 60%;
    left: 60%;


    
   
}


.leftside {
    width: 200px;
    height: inherit;
    color: var(--drkbl);
    font-size: px;
    text-align: right;

    flex-direction: row;
    position: absolute;
    margin-left: 0;
    flex: 1;

}

.bio {
    display: flex;
    margin-inline-start: 205px;
    color: var(--drkbl);
    margin-top: 25px;
    border-left: 3px solid;
    border-color: var(--drkbl);
    padding: 1%;
    margin-right: 50px;
    flex-wrap: wrap;

    
}
.bio2 {
    display: flex;
    margin-inline-start: 205px;
    color: var(--drkbl);
    margin-bottom: 25px;
    border-left: 3px solid;
    border-color: var(--drkbl);
    padding: 1%;
    margin-right: 30px;
    flex-wrap: wrap;
    /* flex-direction: row; */
    



}

.workbox1 {
    display: flex;
    height: 400px;
    border: 4px solid;
    border-color: var(--baby);
    flex: 1 0px;
    width: 100%;
    min-width: 300px;
    
    


}

.workbox2 {
    display: flex;
    height: 200px;
    border: 4px solid;
    border-color: var(--baby);
    flex: 1 0px;
    width: 100%;
    margin-right: 20px;
    flex-wrap: wrap;
    min-width: 300px;
    margin-bottom: 20px;
    

    
}

.workboxtittle {
    height: 60px;
    width: 100px;
    color: var(--gry);
    display: inline-block;
    background-color: var(--baby);
    padding: 5px;
    position: relative;
    top: 50%;
}

h5 {
    font-weight: lighter;
}


#site1 {
    background: var(--gry);
    opacity: .6;
    text-decoration: none;
    background-image: url(../images/Screen\ Shot\ 2022-09-11\ at\ 10.27.28\ PM.png)
}
#site1:hover {

    opacity: 1;
}

#site2 {
    background: var(--gry);
    opacity: .6;
    text-decoration: none;
    background-image: url(../images/artificial-intelligence-g0ddcf44b7_1280.jpg)

}
#site2:hover {
    opacity: 1;
}

#site3 {
    background: var(--gry);
    opacity: .6;
    text-decoration: none;
    background-image: url(../images/sea-gd80bede03_1280.jpg)

}
#site3:hover {
    opacity: 1;
}


#site4 {
    background: var(--gry);
    opacity: .6;
    text-decoration: none;
    background-image: url(../images/technology-g9100600e6_1280.jpg)

}
#site4:hover {
    opacity: 1;
}

#site5 {
    background: var(--gry);
    opacity: .6;
    text-decoration: none;
    background-image: url(../images/tree-ge280d4011_1280.jpg)

}
#site5:hover {
    opacity: 1;
}

.footinfo {
    font-size: 25px;
    display: inline-block;
    color: var(--drkbl);
    text-align: center;
    height: 60px;
    flex: 1 0px;
    color: var(--drkbl);
}

a {
    
    color: var(--drkbl);
}
ul li {
    display: inline-block;

}
@media only screen and (max-width: 768px) {
    header {
        flex-direction: row;
        background-color: var(--baby);
        display: flex;
        height: 100px;
        
        
    }
    nav a {
        flex-direction: row;
        color: var(--gry);
        display: inline-flex;
        order: 2;
        
        
    }
    #banner {
        display: none;
    }
}

